--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -79,6 +79,9 @@ import com.android.build.OutputFile
 
 project.ext.react = [
     enableHermes: false,  // clean and rebuild if changing
+    bundleInDebug: true,
+    bundleAssetName: "index.android.bundle",
+    entryFile: "index.js",
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
