--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-haptic-feedback": "^1.9.0",
+    "react-native-navigation-bar-color": "^2.0.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^0.7.3",
