--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
+    "react-native-simple-toast": "^1.1.2",
+    "react-native-sound": "^0.11.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0",
