--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/clipboard": "^1.2.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^5.8.0",
     "@react-native-community/picker": "^1.3.0",
     "@react-navigation/bottom-tabs": "^5.2.8",
     "@react-navigation/drawer": "^5.5.1",
@@ -36,7 +37,6 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
     "react-native-simple-toast": "^1.1.2",
-    "react-native-sound": "^0.11.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0",
