--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-libs-browser": "^2.2.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-crypto": "^2.2.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-haptic-feedback": "^1.9.0",
@@ -52,7 +53,8 @@
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
-    "react-test-renderer": "16.11.0"
+    "react-test-renderer": "16.11.0",
+    "rn-nodeify": "github:tradle/rn-nodeify"
   },
   "jest": {
     "preset": "react-native"
