--- a/package.json
+++ b/package.json
@@ -20,18 +20,26 @@
     "@react-navigation/material-top-tabs": "^5.1.10",
     "@react-navigation/native": "^5.1.7",
     "@react-navigation/stack": "^5.2.14",
+    "@tradle/react-native-http": "^2.0.1",
     "axios": "^0.19.2",
+    "browserify-zlib": "^0.1.4",
+    "dns.js": "^1.0.1",
     "ethereum-tx-decoder": "^3.0.0",
     "ethers": "^4.0.47",
+    "events": "^1.1.1",
+    "https-browserify": "0.0.1",
     "native-base": "^2.13.12",
     "node-libs-browser": "^2.2.1",
+    "path-browserify": "0.0.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-crypto": "^2.2.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-haptic-feedback": "^1.9.0",
+    "react-native-level-fs": "^3.0.1",
     "react-native-navigation-bar-color": "^2.0.1",
+    "react-native-os": "^1.2.6",
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^1.8.0",
     "react-native-responsive-screen": "^1.4.1",
@@ -40,10 +48,19 @@
     "react-native-simple-toast": "^1.1.2",
     "react-native-splash-screen": "^3.2.0",
     "react-native-tab-view": "^2.14.0",
+    "react-native-tcp": "^3.3.2",
+    "react-native-udp": "^2.7.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.8",
     "react-qr-code": "^1.0.0",
-    "save": "^2.4.0"
+    "readable-stream": "^1.0.33",
+    "save": "^2.4.0",
+    "stream-browserify": "^1.0.0",
+    "string_decoder": "^0.10.31",
+    "timers-browserify": "^1.4.2",
+    "url": "^0.10.3",
+    "util": "^0.10.4",
+    "vm-browserify": "0.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
@@ -63,5 +80,57 @@
     "assets": [
       "./assets/fonts"
     ]
+  },
+  "react-native": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  },
+  "browser": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
   }
 }
