--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
     "react-native-simple-toast": "^1.1.2",
+    "react-native-sound": "^0.11.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-tcp": "^3.3.2",
